# pykernel_mcp

./: .gitignore  LICENSE  README.md  pykernel_mcp.py  pyproject.toml
src/pykernel_mcp/: server.py
