[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pykernel-mcp"
version = "0.2.5"
description = "MCP server providing persistent IPython kernel for executing Python code with numpy, pandas, and matplotlib"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Douwe Osinga", email = "douwe@osinga.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "pip",
    "jupyter-client>=8.0.0",
    "ipykernel>=6.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
pykernel-mcp = "pykernel_mcp.server:main"

[project.urls]
Homepage = "https://github.com/DOsinga/pykernel_mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/pykernel_mcp"]

[tool.hatch.build]
include = [
    "src/pykernel_mcp/**/*.py",
    "src/pykernel_mcp/highlight_js/*",
]
